Added showLinks and showNotes options.